--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.home_didact.activities.MainActivity" />
         </activity>
+        <activity
+            android:name="com.home_didact.activities.ListLearners"
+            android:label="@string/title_activity_list_learners"
+            android:parentActivityName="com.home_didact.activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.home_didact.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
