--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.home_didact.activities.MainActivity" />
         </activity>
+        <activity
+            android:name="com.home_didact.activities.LearnerProfile"
+            android:label="@string/title_activity_learner_profile"
+            android:parentActivityName="com.home_didact.activities.ListLearners" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.home_didact.activities.ListLearners" />
+        </activity>
     </application>
 
 </manifest>
