--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 android:value="com.home_didact.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.home_didact.activities.ListLearners"
+            android:name=".activities.ListLearnersActivity"
             android:label="@string/title_activity_list_learners"
             android:parentActivityName="com.home_didact.activities.MainActivity" >
             <meta-data
@@ -41,9 +41,9 @@
                 android:value="com.home_didact.activities.MainActivity" />
         </activity>
         <activity
-            android:name="com.home_didact.activities.LearnerProfile"
+            android:name=".activities.LearnerProfileActivity"
             android:label="@string/title_activity_learner_profile"
-            android:parentActivityName="com.home_didact.activities.ListLearners" >
+            android:parentActivityName=".activities.ListLearnersActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.home_didact.activities.ListLearners" />
